--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@ From burgers to salads, seafood to pastas, you’ll find all kinds of hearty mea
       <a href="https://www.linkedin.com/in/olabode-hezekiah-1105a6141/" target="_blank" class="fab fa-linkedin"></a>
    </div>
 
-   <div class="credit"> created by <span>NETwit Technology</span> | all rights reserved! </div>
+   <div class="credit"> created by <span>NETwit Technology</span> | all rights reserved. 2022. </div>
 
 </section>
 
